skin/base.css
@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");

/* Ensure the statuspanel doesn't overlap with the tabs toolbar */
statuspanel {
    position: relative !important;
    display: block;
}

/* Style the scrollbox for vertical arrangements. */
.tabbrowser-arrowscrollbox > scrollbox {
    overflow-x: hidden !important;
    overflow-y: auto !important;
}

/* Since we get an actual scrollbar in this vertical arrangement, we
   don't need these extra scroll buttons. */
.tabbrowser-arrowscrollbox > .scrollbutton-up,
.tabbrowser-arrowscrollbox > .scrollbutton-down {
    visibility: collapse !important;
}

/* Ensure the tab favicon doesn't stretch. */
.tab-icon-image {
    max-width: 16px;
    max-height: 16px;
}

/* Hide the original tab toolbar buttons. */
.tabs-newtab-button {
    visibility: collapse;
}

/* No special treatment for app tabs (for now). */
.tabbrowser-tab[pinned] {
    position: inherit;
}
.tabbrowser-tab[pinned] > .tab-text {
    display: inherit;
}

/* Ensure the twisty image doesn't stretch. */
.verticaltabs-twisty-container {
    -moz-box-pack: start;
    -moz-box-align: center;
}

/* Collapse/expand animation */
.tabbrowser-tab[fadein]:not([pinned]) {
    -moz-transition-property: visibility, height, min-height, max-height, padding-left;
    -moz-transition-duration: .1s;
    -moz-transition-timing-function: ease-out;
}
.verticaltabs-collapsed {
    height: 0px !important;  /* animation shrinks height */
    min-height: 0px !important;
    max-height: 0px !important;
    visibility: collapse;
}

